# smartfusion_mss

./: BUILD.bazel  README.md  README.txt
exported_firmware/: README.txt
exported_firmware/CMSIS/startup_gcc/: startup_m2sxxx.S
exported_firmware/drivers/mss_ethernet_mac/: mss_ethernet_mac_user_config.h
exported_firmware/drivers/mss_pdma/: mss_pdma.c  mss_pdma.h
exported_firmware/drivers_config/sys_config/: sys_config_mddr_define.h  sys_config_mss_clocks.h
exported_firmware/filelist/: DESIGN_FIRMWARE_SmartFusion2_MSS_CAN_Driver_0.cxf  DESIGN_FIRMWARE_SmartFusion2_MSS_Ethernet_MAC_Driver_0.cxf  DESIGN_FIRMWARE_SmartFusion2_MSS_MMUART_Driver_0.cxf  DESIGN_FIRMWARE_SmartFusion2_MSS_RTC_Driver_0.cxf  DESIGN_FIRMWARE_SmartFusion2_MSS_SPI_Driver_1.cxf  DESIGN_FIRMWARE_SmartFusion2_MSS_USB_Driver_0.cxf  PowerEFI_SOM_010_MSS_CM3_hw_platform.cxf  workspace.cxf
filelist/: DESIGN_FIRMWARE_SmartFusion2_MSS_GPIO_Driver_0.cxf  DESIGN_FIRMWARE_SmartFusion2_MSS_I2C_Driver_1.cxf  PowerEFI_SOM_010_MSS_CM3_hw_platform.cxf  workspace.cxf
