# Copyright 2025 The Pigweed Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "smartfusion_mss",
    srcs = [
        "exported_firmware/CMSIS/startup_gcc/startup_m2sxxx.S",
        "exported_firmware/CMSIS/system_m2sxxx.c",
        "exported_firmware/drivers/mss_can/mss_can.c",
        "exported_firmware/drivers/mss_ethernet_mac/m88e1340_phy.c",
        "exported_firmware/drivers/mss_ethernet_mac/mss_ethernet_mac.c",
        "exported_firmware/drivers/mss_gpio/mss_gpio.c",
        "exported_firmware/drivers/mss_hpdma/mss_hpdma.c",
        "exported_firmware/drivers/mss_i2c/mss_i2c.c",
        "exported_firmware/drivers/mss_nvm/mss_nvm.c",
        "exported_firmware/drivers/mss_rtc/mss_rtc.c",
        "exported_firmware/drivers/mss_spi/mss_spi.c",
        "exported_firmware/drivers/mss_sys_services/mss_comblk.c",
        "exported_firmware/drivers/mss_sys_services/mss_sys_services.c",
        "exported_firmware/drivers/mss_uart/mss_uart.c",
        "exported_firmware/drivers/mss_usb/mss_usb_common_cif.c",
        "exported_firmware/drivers/mss_usb/mss_usb_device.c",
        "exported_firmware/drivers/mss_usb/mss_usb_device_cdc.c",
        "exported_firmware/drivers/mss_usb/mss_usb_device_cif.c",
        "exported_firmware/drivers/mss_usb/mss_usb_device_hid.c",
        "exported_firmware/drivers/mss_usb/mss_usb_device_msd.c",
        "exported_firmware/drivers/mss_usb/mss_usb_device_printer.c",
        "exported_firmware/drivers/mss_usb/mss_usb_device_rndis.c",
        "exported_firmware/drivers/mss_usb/mss_usb_device_vendor.c",
        "exported_firmware/drivers/mss_usb/mss_usb_host.c",
        "exported_firmware/drivers/mss_usb/mss_usb_host_cif.c",
        "exported_firmware/drivers/mss_usb/mss_usb_host_msc.c",
        "exported_firmware/drivers_config/sys_config/sys_config.c",
    ],
    hdrs = glob([
        "exported_firmware/**/*.h",
    ]),
    copts = [
        "-Wno-error=cast-qual",
        "-Wno-error=redundant-decls",
        "-w",
    ],
    includes = [
        "exported_firmware/CMSIS",
        "exported_firmware/CMSIS/V4.5/Include",
        "exported_firmware/drivers",
        "exported_firmware/drivers_config/sys_config",
        "exported_firmware/hal",
        "exported_firmware/hal/CortexM3",
    ],
    target_compatible_with = [
        "@pigweed//pw_build/constraints/arm:cortex-m3",
    ],
)